# splitwise-multimodal-ai

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
backend/: Dockerfile  requirements.txt
backend/app/: main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: bills.py
backend/app/core/: config.py  llm_config.py
backend/app/models/: bill_models.py  response_models.py
backend/app/services/: bill_splitter.py  llm_factory.py  llm_factory_backup.py  llm_service.py
frontend/: Dockerfile  app.py  requirements.txt
frontend/components/: upload.py
frontend/services/: api_client.py
nginx/: Dockerfile  nginx.conf
src/splitwise/: __init__.py  app.py  backup_splitter.py  bill_parser.py  class_models.py  config.py  llm_factory.py  llm_handler.py
